static/css/main.css
/* ... */
::-moz-selection {
    background: #666;
    color: white;
    text-shadow: none
}
::selection {
    background: #666;
    color: white;
    text-shadow: none
}
.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #333;
    padding: 0.2em 0
}
#site-header {
    text-align: center;
    min-height: 15em;
    padding-top: 7em;
    margin-bottom: 9em
}
@media (max-width: 800px) {
    #site-header {
        padding-top: 4em !important;
        margin-bottom: 4em !important
    }
}
.blog-title {
    text-transform: uppercase;
    letter-spacing: 6px;
    font-size: 75px
}
.blog-description {
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #b3b3b3;
    font-size: 80%
}
#blog-logo img {
    margin: 0 auto 3em auto
}
article {
    margin-bottom: 9em
}
article.li {
    margin-bottom: 2em;
}
@media (max-width: 800px) {
    article {
        margin-bottom: 7em !important
    }
    article.li {
        margin-bottom: 2em !important;
    }
}
.post-header {
    text-align: center
}
.post-title {
    margin-bottom: 30px
}
.post-time {
    text-transform: uppercase;
    letter-spacing: 4px;
    margin-bottom: 30px;
    font-size: 80%
}
.post-footer {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-size: 80%;
    margin-top: 30px
}
.pagination {
    text-align: center;
    margin: 4em 0 9em 0;
    color: #b3b3b3
}
@media (max-width: 800px) {
    .pagination {
        margin: 4em 0 6em 0 !important
    }
}
.post-content a,
#site-footer a {
    color: #333;
    text-decoration: none;
    font-weight: bold
}
.post-content a:hover,
#site-footer a:hover {
    color: #e6e6e6;
    border-bottom: 1px solid
}
.m-logo {
    display: none !important;
    visibility: hidden
}
.p-post-title {
    margin-bottom: 50px
}
.f-1 {
    *zoom: 1
}
.f-1:before,
.f-1:after {
    content: "";
    display: table
}
.f-1:after {
    clear: both
}
.author {
    float: left
}
@media (max-width: 550px) {
    .author {
        float: none !important
    }
}
@media (max-width: 550px) {
    .author {
        float: none !important
    }
    .f-post-time {
        float: inherit !important
    }
}
.f-post-time {
    float: right
}
@media (max-width: 550px) {
    .f-post-time {
        float: none !important
    }
}
.f-2 {
    *zoom: 1
}
.f-2:before,
.f-2:after {
    content: "";
    display: table
}
.f-2:after {
    clear: both
}
.f-post-tags {
    float: right
}
@media (max-width: 550px) {
    .f-post-tags {
        float: none !important
    }
}
.share {
    float: left
}
@media (max-width: 550px) {
    .share {
        float: none !important;
        margin-bottom: 1.5em
    }
}
#comments {
    margin-top: 30px
}
@media (max-width: 550px) {
    #comments {
        margin-top: 1em
    }
}
.m-page a {
    color: #333 !important
}
#site-footer {
    text-align: center;
    font-size: 13px;
    height: 10em
}
.credit-badge {
  display: inline-block;
  padding: 4px;
}
.credit-badge img {
  max-height: 40px;
}
#site-footer .credit-badge:hover {
  border: 0;
}
.list-item-wrapper,
.post-media-left-wrapper {
  overflow: hidden;
}
.list-item-wrapper div,
.list-item-wrapper p,
.post-media-left-wrapper div {
  min-height: 200px;
}
.list-item-media-left,
.post-media-left {
  float:left;
  margin-right: 20px;
  max-width: 200px;
}
.list-item-media-right {
  float:right;
  margin-left: 20px;
  max-width: 200px;
}
.list-item-content,
.post-text {
  overflow: hidden;
  min-height: 170px;
}
@media screen and (max-width: 550px) {
  .list-item-media-left,
  .post-media-left {
    float: none;
    margin-right: 0;
    margin-bottom: 30px;
    max-width: 100%;
    border: 0;
  }
  .list-item-media-right {
    float: none;
    margin-left: 0;
    margin-bottom: 30px;
    max-width: 100%;
    border: 0;
  }
}

